--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>The Dirty Dozen</title>
-<link rel="stylesheet" href="./game.css" />
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
+
+    a-table {
+        flex-grow: 1;
+        background-color: #2c8f2c;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    a-hand {
+        height: 200px;
+        background-color: #1c5a1c;
+        padding: 10px;
+    }
+</style>
 
 <a-table></a-table>
 <a-hand></a-hand>
