--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         flex-grow: 1;
         background-color: #2c8f2c;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    a-table>* {
+        width: 80%;
     }
 
     a-hand {
