Inline the spritesheet (not used yet)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
         background-color: #1c5a1c;
         padding: 10px;
     }
+
+    [hidden] {
+        display: none;
+    }
 </style>
+
+<img hidden src="./sprites/spritesheet.png.webp" />
 
 <a-table></a-table>
 <a-hand></a-hand>
