--- a/index.html
+++ b/index.html
@@ -5,31 +5,10 @@
 <title>The Dirty Dozen</title>
 <style>
     body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
         margin: 0;
         padding: 0;
-    }
-
-    a-table {
-        flex-grow: 1;
+        font-family: Arial, sans-serif;
         background-color: #2c8f2c;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    a-table>* {
-        width: 80%;
-    }
-
-    a-hand {
-        height: 200px;
-        background-color: #1c5a1c;
-        padding: 10px;
     }
 
     [hidden] {
@@ -39,7 +18,10 @@
 
 <img hidden src="./sprites/spritesheet.png.webp" />
 
-<a-table></a-table>
-<a-hand></a-hand>
+<battle-controller>
+    <a-table style="flex: 1;"></a-table>
+    <button>End Turn</button>
+    <a-hand></a-hand>
+</battle-controller>
 
 <script src="./index.js"></script>
