--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
 <battle-controller>
     <actor-controller who="player1">
-        <a-deck></a-deck>
-        <a-hand></a-hand>
+        <a-deck style="flex: 1;"></a-deck>
+        <a-hand style="flex: 3;"></a-hand>
     </actor-controller>
 
     <a-table style="flex: 1; align-items: center;"></a-table>
 
     <actor-controller who="player2">
-        <a-deck></a-deck>
-        <a-hand></a-hand>
+        <a-deck style="flex: 1;"></a-deck>
+        <a-hand style="flex: 3;"></a-hand>
     </actor-controller>
 </battle-controller>
 
