Example Reveal: Woody

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 <img hidden src="./sprites/spritesheet.png.webp" />
 
 <battle-controller>
-    <actor-controller who="player1">
+    <actor-controller id="p1">
         <a-deck></a-deck>
-        <a-hand></a-hand>
+        <a-hand>
+            <woo-dy> </woo-dy>
+        </a-hand>
     </actor-controller>
 
     <a-table></a-table>
 
-    <actor-controller who="player2">
+    <actor-controller id="p2">
         <a-deck></a-deck>
         <a-hand></a-hand>
     </actor-controller>
