stash card details

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a-hand>
             <woo-dy></woo-dy>
             <robo-cop></robo-cop>
+            <a-baracus></a-baracus>
         </a-hand>
     </actor-controller>
 
