--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <actor-controller id="p1">
         <a-deck></a-deck>
         <a-hand>
-            <woo-dy> </woo-dy>
+            <woo-dy></woo-dy>
+            <robo-cop></robo-cop>
         </a-hand>
     </actor-controller>
 
