--- a/index.html
+++ b/index.html
@@ -19,18 +19,15 @@
 <img hidden src="./sprites/spritesheet.png.webp" />
 
 <battle-controller>
-    <actor-controller id="p1">
+    <actor-controller id="rival">
         <a-deck></a-deck>
         <a-hand>
-            <woo-dy></woo-dy>
-            <robo-cop></robo-cop>
-            <a-baracus></a-baracus>
         </a-hand>
     </actor-controller>
 
     <a-table></a-table>
 
-    <actor-controller id="p2">
+    <actor-controller id="player">
         <a-deck></a-deck>
         <a-hand></a-hand>
     </actor-controller>
