a-avatar with current and max energy

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <battle-controller>
     <actor-controller id="rival">
-        <a-deck></a-deck>
-        <a-hand>
-        </a-hand>
+        <a-avatar name="Rival"></a-avatar>
+        <a-hand></a-hand>
+        <a-deck reverse></a-deck>
     </actor-controller>
 
     <a-table></a-table>
@@ -30,6 +30,7 @@
     <actor-controller id="player">
         <a-deck></a-deck>
         <a-hand></a-hand>
+        <a-avatar name="You"></a-avatar>
     </actor-controller>
 </battle-controller>
 
