Listen to click events from battle-controller

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <actor-controller id="player">
         <a-deck></a-deck>
         <a-hand></a-hand>
-        <a-avatar name="You"></a-avatar>
+        <a-avatar name="You">
+            <button id="end-turn">End Turn</button>
+        </a-avatar>
     </actor-controller>
 </battle-controller>
 
