--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        background-color: #2c8f2c;
+        background-color: beige;
     }
 
     [hidden] {
