--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 <img hidden src="./sprites/spritesheet.png.webp" />
 
 <battle-controller>
-    <actor-controller id="rival">
+    <empire-controller id="rival">
         <a-avatar name="Rival"></a-avatar>
         <a-hand></a-hand>
         <a-deck reverse></a-deck>
-    </actor-controller>
+    </empire-controller>
 
     <a-table></a-table>
 
-    <actor-controller id="player">
+    <player-controller id="player">
         <a-deck></a-deck>
         <a-hand></a-hand>
         <a-avatar name="You">
             <button id="end-turn">End Turn</button>
         </a-avatar>
-    </actor-controller>
+    </player-controller>
 </battle-controller>
 
 <script src="./index.js"></script>
