--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         display: flex;
         flex-direction: column;
         width: 300px;
-        height: 100vh;
+        height: calc(100vh - 100px);
         overflow-y: auto;
         background-color: rgba(255, 255, 255, 0.8);
         padding: 10px;
         box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+        flex: 1;
+        padding-bottom: 100px;
     }
 
     body {
@@ -33,10 +35,6 @@
 
     battle-controller {
         flex: 4;
-    }
-
-    log-display {
-        flex: 1;
     }
 </style>
 
