trash logic + batman card

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <a-avatar name="Rival"></a-avatar>
             <a-hand></a-hand>
             <a-deck reverse></a-deck>
+            <a-trash></a-trash>
         </empire-controller>
 
         <a-table></a-table>
@@ -56,6 +57,7 @@
             <a-avatar name="You">
                 <button id="end-turn">End Turn</button>
             </a-avatar>
+            <a-trash></a-trash>
         </player-controller>
     </battle-controller>
 
