--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
     <img hidden src="./sprites/spritesheet.png.webp" />
 
     <battle-controller>
-        <a-avatar type="empire" id="villain">
+        <a-actor type="empire" id="villain">
             <a-deck reverse></a-deck>
             <a-hand></a-hand>
             <a-trash></a-trash>
-        </a-avatar>
+        </a-actor>
 
         <a-table></a-table>
 
-        <a-avatar type="player" id="player">
+        <a-actor type="player" id="player">
             <a-deck></a-deck>
             <a-hand></a-hand>
             <a-trash></a-trash>
             <button slot="end">End Turn</button>
-        </a-avatar>
+        </a-actor>
     </battle-controller>
 
     <log-display>
