game-controller.cards

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 <body>
     <img hidden src="./sprites/spritesheet.png.webp" />
 
-    <game-controller view="battle"></game-controller>
+    <game-controller view="battle" cards="
+        21,21,21,
+        22,22,22,
+        23,23,23,
+        24,24,24
+    "></game-controller>
 
     <script src="./index.js"></script>
 </body>
