Stub of the title view

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <img hidden src="./sprites/spritesheet.png.webp" />
 
-    <game-controller view="battle" cards="
+    <game-controller view="title" cards="
         21,21,21,
         22,22,22,
         23,23,23,
