--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         display: none;
     }
 
-    game-controller {
+    game-container {
         display: block;
     }
 </style>
@@ -23,12 +23,12 @@
 <body>
     <img hidden src="./sprites/spritesheet.png.webp" />
 
-    <game-controller view="title" cards="
+    <game-container view="title" cards="
         21,21,21,
         22,22,22,
         23,23,23,
         24,24,24
-    "></game-controller>
+    "></game-container>
 
     <script src="./index.js"></script>
 </body>
