Stub of the prepare view

--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
 <body>
     <img hidden src="./sprites/spritesheet.png.webp" />
 
-    <game-container view="title" cards="
-        21,21,21,
-        22,22,22,
-        23,23,23,
-        24,24,24
-    "></game-container>
+    <game-container view="title"></game-container>
 
     <script src="./index.js"></script>
 </body>
