Store battle plan directly in HTML

--- a/index.html
+++ b/index.html
@@ -23,7 +23,73 @@
 <body>
     <img hidden src="./sprites/spritesheet.png.webp" />
 
-    <game-container view="title"></game-container>
+    <game-container>
+        <player-deck hidden>
+            <a-card type="21"></a-card>
+            <a-card type="21"></a-card>
+            <a-card type="21"></a-card>
+            <a-card type="22"></a-card>
+            <a-card type="22"></a-card>
+            <a-card type="22"></a-card>
+            <a-card type="23"></a-card>
+            <a-card type="23"></a-card>
+            <a-card type="23"></a-card>
+            <a-card type="24"></a-card>
+            <a-card type="24"></a-card>
+            <a-card type="24"></a-card>
+        </player-deck>
+
+        <battle-scene>
+            <battle-prepare>
+            </battle-prepare>
+            <a-actor type="empire" id="villain" slot="villain">
+                <a-deck reverse></a-deck>
+                <a-hand></a-hand>
+                <a-trash></a-trash>
+            </a-actor>
+            <a-location slot="location" type="death-star"></a-location>
+            <a-location slot="location" type="arkham-asylum"></a-location>
+            <a-location slot="location" type="future-hill-valley"></a-location>
+            <a-actor type="player" id="player" slot="player">
+                <a-deck></a-deck>
+                <a-hand></a-hand>
+                <a-trash></a-trash>
+            </a-actor>
+            <a-log slot="log"></a-log>
+        </battle-scene>
+        <battle-scene>
+            <a-actor type="pirates" id="villain" slot="villain">
+                <a-deck reverse></a-deck>
+                <a-hand></a-hand>
+                <a-trash></a-trash>
+            </a-actor>
+            <a-location slot="location" type="death-star"></a-location>
+            <a-location slot="location" type="arkham-asylum"></a-location>
+            <a-location slot="location" type="future-hill-valley"></a-location>
+            <a-actor type="player" id="player" slot="player">
+                <a-deck></a-deck>
+                <a-hand></a-hand>
+                <a-trash></a-trash>
+            </a-actor>
+            <a-log slot="log"></a-log>
+        </battle-scene>
+        <battle-scene>
+            <a-actor type="kungfu" id="villain" slot="villain">
+                <a-deck reverse></a-deck>
+                <a-hand></a-hand>
+                <a-trash></a-trash>
+            </a-actor>
+            <a-location slot="location" type="death-star"></a-location>
+            <a-location slot="location" type="arkham-asylum"></a-location>
+            <a-location slot="location" type="future-hill-valley"></a-location>
+            <a-actor type="player" id="player" slot="player">
+                <a-deck></a-deck>
+                <a-hand></a-hand>
+                <a-trash></a-trash>
+            </a-actor>
+            <a-log slot="log"></a-log>
+        </battle-scene>
+    </game-container>
 
     <script src="./index.js"></script>
 </body>
