Bring back the title screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <img hidden src="./sprites/spritesheet.png.webp" />
 
-    <game-container>
+    <game-container view="title">
 
         <battle-scene>
             <a-actor type="empire" id="villain" slot="villain">
