Use multi-view to change between battles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <game-container view="title">
 
-        <battle-scene>
+        <battle-scene name="0">
             <a-actor type="empire" id="villain" slot="villain">
                 <a-deck reverse></a-deck>
                 <a-hand></a-hand>
@@ -42,7 +42,7 @@
             <a-log slot="log"></a-log>
         </battle-scene>
 
-        <battle-scene>
+        <battle-scene name="1">
             <a-actor type="pirates" id="villain" slot="villain">
                 <a-deck reverse></a-deck>
                 <a-hand></a-hand>
@@ -59,7 +59,7 @@
             <a-log slot="log"></a-log>
         </battle-scene>
 
-        <battle-scene>
+        <battle-scene name="2">
             <a-actor type="kungfu" id="villain" slot="villain">
                 <a-deck reverse></a-deck>
                 <a-hand></a-hand>
