--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 
 <body>
-    <game-container view="title">
+    <game-container>
 
         <battle-scene name="0">
             <a-actor type="empire" id="villain" slot="villain">
