Flip the villain's hand upside down

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <battle-scene name="0">
             <a-actor type="empire" id="villain" slot="villain">
                 <a-deck reverse></a-deck>
-                <a-hand></a-hand>
+                <a-hand reverse></a-hand>
                 <a-trash></a-trash>
             </a-actor>
             <a-location slot="location" type="death-star"></a-location>
