Styled chips in the log

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     game-container {
         display: block;
     }
+
+    actor-chip,
+    card-chip,
+    location-chip {
+        border: 1px solid #aaa;
+        border-radius: 3px;
+        padding: 0px 2px;
+    }
+
+    actor-chip {
+        background-color: #fee;
+    }
+
+    card-chip {
+        background-color: #fff;
+    }
+
+    location-chip {
+        background-color: #efe;
+    }
 </style>
 
 <body>
