Bring back the pixel card art

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 </style>
 
 <body>
+    <img hidden id="sheet" src="./sprites/spritesheet.png.webp" />
+    <img hidden id="mask" src="./sprites/mask.png.webp" />
+
     <game-container>
 
         <battle-scene name="0">
