Generate the battle plan from seed; store the seed in localStorage

--- a/index.html
+++ b/index.html
@@ -51,60 +51,7 @@
     <img hidden id="sheet" src="./sprites/spritesheet.png.webp" />
     <img hidden id="mask" src="./sprites/mask.png.webp" />
 
-    <game-container>
-
-        <battle-scene name="0">
-            <a-actor type="empire" id="villain" slot="villain">
-                <a-deck reverse></a-deck>
-                <a-hand></a-hand>
-                <a-trash></a-trash>
-            </a-actor>
-            <a-location slot="location" type="death-star"></a-location>
-            <a-location slot="location" type="arkham-asylum"></a-location>
-            <a-location slot="location" type="future-hill-valley"></a-location>
-            <a-actor type="player" id="player" slot="player">
-                <a-deck></a-deck>
-                <a-hand></a-hand>
-                <a-trash></a-trash>
-            </a-actor>
-            <a-log slot="log"></a-log>
-        </battle-scene>
-
-        <battle-scene name="1">
-            <a-actor type="pirates" id="villain" slot="villain">
-                <a-deck reverse></a-deck>
-                <a-hand></a-hand>
-                <a-trash></a-trash>
-            </a-actor>
-            <a-location slot="location" type="death-star"></a-location>
-            <a-location slot="location" type="arkham-asylum"></a-location>
-            <a-location slot="location" type="future-hill-valley"></a-location>
-            <a-actor type="player" id="player" slot="player">
-                <a-deck></a-deck>
-                <a-hand></a-hand>
-                <a-trash></a-trash>
-            </a-actor>
-            <a-log slot="log"></a-log>
-        </battle-scene>
-
-        <battle-scene name="2">
-            <a-actor type="kungfu" id="villain" slot="villain">
-                <a-deck reverse></a-deck>
-                <a-hand></a-hand>
-                <a-trash></a-trash>
-            </a-actor>
-            <a-location slot="location" type="death-star"></a-location>
-            <a-location slot="location" type="arkham-asylum"></a-location>
-            <a-location slot="location" type="future-hill-valley"></a-location>
-            <a-actor type="player" id="player" slot="player">
-                <a-deck></a-deck>
-                <a-hand></a-hand>
-                <a-trash></a-trash>
-            </a-actor>
-            <a-log slot="log"></a-log>
-        </battle-scene>
-
-    </game-container>
+    <game-container></game-container>
 
     <script src="./index.js"></script>
 </body>
