--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>The Dirty Dozen</title>
+<title>Millennials</title>
 <style>
     body {
         margin: 0;
