Some lightweight CSS cleanup to save 80B

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     body {
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
-        background-color: beige;
+        font-family: Arial;
+        background: beige;
     }
 
     [hidden] {
@@ -20,15 +20,15 @@
     }
 
     log-chip.actor {
-        background-color: #fee;
+        background: #fee;
     }
 
     log-chip.card {
-        background-color: #fff;
+        background: #fff;
     }
 
     log-chip.location {
-        background-color: #efe;
+        background: #efe;
     }
 
     [id] {
