Use brighter colors in the log

--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
     }
 
     log-chip {
-        border: 1px solid #aaa;
-        border-radius: 3px;
         padding: 0px 2px;
         cursor: pointer;
     }
 
     log-chip.actor {
-        background: #fee;
+        background: #ddd;
     }
 
     log-chip.card {
-        background: #fff;
+        background: #fd6;
     }
 
     log-chip.location {
-        background: #efe;
+        background: #f80;
     }
 
     [id] {
