Replace log-chips with spans

--- a/index.html
+++ b/index.html
@@ -12,20 +12,15 @@
         display: none;
     }
 
-    log-chip {
+    span.card {
         padding: 0px 2px;
         cursor: pointer;
-    }
-
-    log-chip.actor {
-        background: #ddd;
-    }
-
-    log-chip.card {
         background: #fd6;
     }
 
-    log-chip.location {
+    span.location {
+        padding: 0px 2px;
+        cursor: pointer;
         background: #f80;
     }
 
